# td-cli

./: .gitignore  API.md  LICENSE  Makefile  README.md  _config.yml  pyproject.toml  setup.cfg  setup.py  todo.db
.circleci/: config.yml
.github/: FUNDING.yml
tests/: test_group_edit.py
tmp/: tmp.py
todo/: __init__.py  __main__.py  constants.py  controller.py  exceptions.py  service.py  settings.py  todo.cfg  utils.py
todo/commands/: __init__.py  base.py
todo/commands/config/: __init__.py  initialize.py
todo/commands/group/: __init__.py  add.py  delete.py  edit.py  get.py  initialize.py  list.py  preset.py  use.py
todo/commands/interactive/: __init__.py  interactive.py
todo/commands/todo/: __init__.py  add.py  complete.py  count.py  delete.py  edit.py  edit_details.py  edit_name.py  get.py  interactive.py  list.py  list_interactive.py  uncomplete.py
todo/parser/: __init__.py  base.py
todo/parser/subparsers/: __init__.py  add_group.py  add_todo.py  count_todos.py  group.py  initialize_config.py  list_groups.py  list_todos.py  todo.py
todo/parsers/: __init__.py  add_group.py  add_todo.py  base.py  config.py  group.py  groups.py  list_groups.py  list_todos.py  todo.py  todos.py
todo/renderers/: __init__.py  base.py  render_error.py  render_help.py  render_input.py  render_output.py  render_output_with_textwrap.py
todo/renderers/styles/: __init__.py  ansi_fore.py  ansi_style.py  base.py
todo/services/: __init__.py  base.py  group.py  todo.py
todo/utils/: __init__.py  menu.py
todo/utils/menu/: __init__.py  horizontal_tracker.py  movement_tracker.py  vertical_tracker.py
