################### BLACK ###################
[tool.black]
line-length = 100


################### ISORT ###################
[tool.isort]
not_skip = "__init__.py"
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
order_by_type = "1"

known_first_party = ["todo"]
known_third_party = []

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "CORE", "FIRSTPARTY", "LOCALFOLDER"]


################### POETRY ###################
[tool.poetry]
name = "td-cli"
version = "2.2.2"
description = "A command line todo manager"
package-mode = false

authors = [
    "Darri Steinn Konn Konradsson <darrikonn@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/darrikonn/td-cli"
homepage = "https://github.com/darrikonn/td-cli"

keywords = ["td-cli"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"
ipdb = "^0.13.13"
ipython = "^9.4.0"
flake8 = "^7.3.0"
wheel = "^0.45.1"
twine = "^6.1.0"
types-setuptools = "^80.9.0.2025082"
setuptools = "^80.9.0"
