################### BLACK ###################
[tool.black]
line-length = 100


################### ISORT ###################
[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
order_by_type = "1"

known_first_party = ["todo"]
known_third_party = []

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


################### PROJECT ###################
[project]
name = "td-cli"
version = "2.2.3"
description = "A command line todo manager"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Darri Steinn Konn Konradsson", email = "darrikonn@gmail.com"}
]
keywords = ["td-cli"]
dependencies = []

[project.urls]
repository = "https://github.com/darrikonn/td-cli"
homepage = "https://github.com/darrikonn/td-cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "flake8>=7.3.0",
    "wheel>=0.45.1",
    "twine>=6.1.0",
    "types-setuptools>=80.9.0.2025082",
    "setuptools>=80.9.0",
]
