[flake8]
ignore = E128,E172,E203,E241,E712,E731,W503
max-line-length = 120
max-complexity = 10

[isort]
not_skip = __init__.py
virtual_env = venv
force_grid_wrap=0
include_trailing_comma=True
line_length=100
multi_line_output=3
order_by_type=1
known_first_party=todo
sections=FUTURE,STDLIB,THIRDPARTY,CORE,FIRSTPARTY,LOCALFOLDER

[metadata]
license_file = LICENSE

[bdist_wheel]
universal=1

[mypy]
python_version = 3.7
warn_return_any = False
warn_unused_configs = True
ignore_missing_imports = True
follow_imports = silent<Paste>
